Finish cleaning up Integer.valueOf in java backend code